Fix for compilation issues in nexus-repository-content